Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14123

.rocksdb folder may break workflow which re-create data directory

    XMLWordPrintable

Details

    Description

      I did see many workflows/scripts which re-create data directory with commands like:

      sudo rm -rf /var/lib/mysql/*
      sudo mysql_install_db
      

      OR :

      sudo rm -rf /var/lib/mysql/*
      cp -R /backup-location/* /var/lib/mysql/
      

      The rm command will not clean up eventual .rocksdb folder, which may cause errors in new instance like:

      2017-10-25 10:12:40 139671395502272 [Warning] RocksDB: Schema mismatch - Table d9.b is registered in RocksDB but does not have a .frm file
      2017-10-25 10:12:40 139671395502272 [ERROR] RocksDB: Problems validating data dictionary against .frm files, exiting
      2017-10-25 10:12:40 139671395502272 [ERROR] RocksDB: Failed to initialize DDL manager.
      2017-10-25 10:12:40 139671395502272 [ERROR] Plugin 'ROCKSDB' init function returned error.
      2017-10-25 10:12:40 139671395502272 [ERROR] Plugin 'ROCKSDB' registration as a STORAGE ENGINE failed.
      

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              anikitin Andrii Nikitin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: