MDEV-14123: ".rocksdb folder may break workflow", and other MDEVs

Rename  Use '#rocksdb' instead of '.rocksdb' as subdirectory for RocksDB
datadir.